<resources>
    <string name="app_name">Nongki</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="signup">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="title_login_page">Silakan isi datamu dulu ya</string>
    <string name="subtitle_signup_page">Discover Indonesia Hidden Gems</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="username">username</string>
    <string name="subtitle_login_page">Welcome to Nongki. Enter your information below</string>
    <string name="link_to_register">Create here</string>
    <string name="ask_account">Don\'t have an account yet? ?</string>
    <string name="passwordHint">Password</string>
    <string name="usernameHint">Username</string>
    <string name="full_nameHint">Full Name</string>
    <string name="link_to_sign_in">Sign In</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="wishList_title">Your Favorite Place</string>
    <string name="choose_pref">What Kind of Place Do You Want To Visit?</string>
    <string name="choose_pref_dietary">Select any of the following dietary restrictions that apply to you</string>
    <string name="review">seru ada live musik dan dj nyacocok buat party dan banyak spot yg instagramable lokasinya jga strategis di tengah pusat kota</string>
    <string name="searchbar_hint">Masukkan kata</string>



    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
</resources>